<resources>
    <string name="app_name">Guess Me !</string>

    <string name="edit_calcul" translatable="false"> </string>


    <string name="button_validate">Validate</string>
    <string name="button_erase">Erase</string>

    <string name="button_play">Play</string>
    <string name="select_language_btn">Select language</string>
    <string name="button_quit">Quit</string>


    <string name="home_menu_item">Home</string>
    <string name="about_menu_item">About</string>

    <string name="life" formatted="true">Life : %1$d</string>
    <string name="score" formatted="true">Score : %1$d</string>
    <string name="timer" formatted="true" translatable="false">%1$s</string>

    <string name="correct_answer" formatted="true" >Correct ! Answer is %1$d</string>
    <string name="wrong_answer" formatted="true" >Wrong. Answer is %1$d</string>


    <string name="question" translatable="false"> </string>

    <string name="about_description">
    Additional features added:\n
    - 4 available languages\n
    - saving username and score in a file\n
    - leaderboard page\n
    - score, lives and timer\n
    - 3 difficulty levels: easy, medium, hard, based on the score
    </string>

    <string name="about_credit">Raphaël Mélin and Paul Maillard group G2</string>



    <string name="leaderboard">Leaderboard</string>
    <string name="leaderboard_rank">Rank</string>
    <string name="leaderboard_name">Name</string>
    <string name="leaderboard_score">Score</string>

    <string name="edit_calcul_instruction">Enter your answer</string>
</resources>