<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:minWidth="200dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/menu_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="16dp"
                android:textColor="@android:color/black"
            />



            <Button
                android:id="@+id/button_play"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_play" />


            <ImageView
                android:id="@+id/flag_img"
                android:layout_width="48dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_flag_eng" />


            <Button
                android:id="@+id/select_language_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_flag_fr"
                android:text="@string/select_language_btn" />


            <Button
                android:id="@+id/quit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/button_quit" />


        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>