<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textViewAboutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_menu_item"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingBottom="16dp"/>

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_description"
            android:textSize="16sp"
            android:lineSpacingExtra="4dp"
            android:paddingBottom="16dp"/>

        <TextView
            android:id="@+id/textViewAboutCredit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_credit"
            android:textSize="14sp"
            android:textColor="#666666"
            android:gravity="start"
            android:paddingTop="8dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
